# askfaro

./: .gitignore  Cargo.toml  README.md  TESTING.md  askfaro.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
core-free/: Cargo.toml  PUBLIC_MIRROR.md
core-free/src/: envelope.rs  error.rs  lib.rs
core-free/src/free_tools/: astronomy.rs  calc.rs  datetime.rs  encoding.rs  mod.rs  phone.rs  random.rs  timer.rs  timezone.rs  units.rs
examples/: quickstart.py
python/askfaro/: __init__.py  _browse.py  _capabilities.py  _pcx_cache.py  aclient.py  client.py  local.py  result.py
python/faro/: __init__.py  client.py  errors.py  local.py  result.py
src/: lib.rs
tests/: conftest.py  test_async.py  test_browse_cache.py  test_capabilities.py  test_discovery.py  test_live.py  test_local.py  test_routing.py  test_run.py  test_tiers.py
