# Workspace root for the open-source Faro slice: the faro-core-free crate and the
# native binding (askfaro._core) bundled into the askfaro Python package.
[workspace]
members = ["core-free"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/poolside-ventures/askfaro"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[package]
name = "askfaro-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native core bundled into the askfaro Python package (the askfaro._core extension)."

[lib]
# Imports as `askfaro._core` (maturin module-name); the #[pymodule] fn is `_core`.
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# The open-source MIT free-tool slice of the Faro core (vendored in this repo).
faro-core-free = { path = "core-free" }
pyo3 = { version = "0.28", features = ["abi3-py39", "extension-module"] }
