[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
# `faro` / `faro-sdk` are taken on PyPI, so the distribution and the import name
# are both `askfaro` (cf. askfaro-cli). The native core is bundled as
# `askfaro._core` (see tool.maturin.python-source).
name = "askfaro"
description = "Faro SDK: run free Faro tools on-device via the bundled Rust core, fall back to the API for the rest. Local and remote results share the identical envelope."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    # Remote fallback transport. The Rust core is compiled into this package
    # (askfaro._core), so there is no separate core dependency to install.
    "httpx>=0.28.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://askfaro.com"
Repository = "https://github.com/poolside-ventures/faro"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]

[tool.maturin]
# Mixed Rust/Python: pure-Python SDK under python/faro, native core as askfaro._core.
python-source = "python"
module-name = "askfaro._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Live contract tests hit the real Faro endpoints; they are excluded from the
# default (offline) run and selected explicitly with `-m live`.
addopts = "-m 'not live'"
markers = [
    "live: exercises the REAL Faro API / skill agent (needs network; FARO_API_KEY for the authed paths). Run with -m live.",
]
