[package]
name = "faro-core-free"
version.workspace = true
edition.workspace = true
# The free slice is open source (the on-device capability layer). MIT, unlike the
# private superset crate.
license = "MIT"
repository.workspace = true
description = "Faro free-tool core: deterministic in-process tools (calc, units, phone, astronomy, encoding, datetime, timezone, random) and the canonical output envelope. Pure-Rust, no network."

[lib]
crate-type = ["rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Free-tool computation (all pure-Rust so the abi3 wheel + every host binding
# cross-compile unchanged): hashing/encoding/ids, scientific calc, unit registry,
# phone metadata, sun/moon, time math + IANA tz, holiday calendars.
base64 = "0.22"
sha1 = "0.10"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"
getrandom = "0.2"
fasteval = "0.2"
rink-core = { version = "0.9.0", features = ["bundle-files"] }
phonenumber = "0.3.9"
suncalc = "0.4.0"
jiff = "0.2"
holidays = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
